--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <div class="wrapper">
         <div class="title">
             <img class="profile-image" src="Katz.png" alt="Profile Image">
-            Katz</div>
+            Katz 
+            <div class="status">
+                <span class="dot"></span>
+                <span class="text">En línea</span>
+              </div>
+              
+            </div>
+            
         <div class="box" id="chat-content">
             <!-- Los mensajes del chat se agregarán aquí dinámicamente -->
             <br clear="both">
