--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
     <script>
         document.getElementById("openChatbot").addEventListener("click", function() {
             // Abre el chatbot en una nueva ventana emergente
-            window.open("index.html", "Chatbot", "width=400,height=600");
+            window.open("https://chatbot-portal-it.netlify.app/", "Chatbot", "width=400,height=600");
         });
     </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous
