--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
         <div class="typing-area">
             <div class="input-field">
                 <input type="text" id="user-input" placeholder="Type your message" required>
-                <button id="send-button">Send</button>
+                <button type="submit" id="send-button">Send</button>
             </div>
         </div>
     </div>
