--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <audio id="typingSound" src="typing_messenger.mp3" preload="auto" type="audio/mpeg"></audio>
-    <audio id="messageSound" src="message.mp3" preload="auto" type="audio/mpeg"></audio>
+    <audio id="messageSound" src="iphone_noti.mp3" preload="auto" type="audio/mpeg"></audio>
     <audio id="sendSound" src="enviar.wav" preload="auto" type="audio/wav"></audio>
     
 
