--- a/index2.html
+++ b/index2.html
@@ -1,53 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <style>
-        .wrapper {
-            background-image: url('wallpaper_2.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-        }
+      .wrapper {
+        background-color: rgb(255, 255, 255);
+        background-size: cover; /* Para ajustar la imagen al tamaño del contenedor */
+        background-repeat: no-repeat;
+      }
     </style>
 
     <title>Portal IT Chatbot</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <div class="title">
-            <img class="profile-image" src="Katz.png" alt="Profile Image">
-            Katz
-            <div class="status">
-                <span class="dot"></span>
-                <span class="text">En línea</span>
-            </div>
-
+      <div class="title">
+        <img class="profile-image" src="Katz.png" alt="Profile Image" />
+        Katz
+        <div class="status">
+          <span class="dot"></span>
+          <span class="text">En línea</span>
         </div>
+      </div>
 
-        <div class="box" id="chat-content">
-            <!-- Los mensajes del chat se agregarán aquí dinámicamente -->
-            <br clear="both">
-        </div>
+      <div class="box" id="chat-content">
+        <!-- Los mensajes del chat se agregarán aquí dinámicamente -->
+        <br clear="both" />
+      </div>
 
-        <div class="typing-area">
-            <div class="input-field">
-                <input type="text" id="user-input" placeholder="Escribe tu mensaje..." required>
-                <button type="submit" id="send-button">Send</button>
-            </div>
+      <div class="typing-area">
+        <div class="input-field">
+          <input
+            type="text"
+            id="user-input"
+            placeholder="Escribe tu mensaje..."
+            required
+          />
+          <button type="submit" id="send-button">Send</button>
         </div>
+      </div>
     </div>
-    <audio id="typingSound" src="typing_messenger.mp3" preload="auto" type="audio/mpeg"></audio>
-    <audio id="messageSound" src="iphone_noti.mp3" preload="auto" type="audio/mpeg"></audio>
-    <audio id="sendSound" src="enviar.wav" preload="auto" type="audio/wav"></audio>
-
+    <audio
+      id="typingSound"
+      src="typing_messenger.mp3"
+      preload="auto"
+      type="audio/mpeg"
+    ></audio>
+    <audio
+      id="messageSound"
+      src="iphone_noti.mp3"
+      preload="auto"
+      type="audio/mpeg"
+    ></audio>
+    <audio
+      id="sendSound"
+      src="enviar.wav"
+      preload="auto"
+      type="audio/wav"
+    ></audio>
 
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
