--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         <div class="box" id="chat-content">
             <br>
             <br>
-            <img src="Katz.png" width="100" style="border-radius: 50px;">
+            <img src="./img/Katz.png" width="100" style="border-radius: 100%;">
             <h1>Katz</h1>
-            <p>Chatbot del Portal IT</p>
+            <p>Portal IT Chatbot</p>
             <a style="--clr: #7808d0" class="button" href="index2.html" id="Continuar">
                 <span class="button__icon-wrapper">
                     <svg width="10" class="button__icon-svg" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 15">
