--- a/google_site.html
+++ b/google_site.html
@@ -19,7 +19,6 @@
         font-family: "Poppins", sans-serif;
       }
 
-<<<<<<< HEAD
         .card {
             width: 150px;
             background-color: #fff;
@@ -46,6 +45,7 @@
             border-radius: 5px;
             margin-top: 10px;
             text-decoration: none;
+            font-size: 14px;
         }
         p{
             font-size: 10px;
@@ -53,34 +53,6 @@
         h2 {
             font-size: 14px;
         }
-=======
-      .card {
-        width: 300px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        text-align: center;
-        padding: 20px;
-        margin: 10px;
-      }
-
-      .card img {
-        display: block;
-        margin: 0 auto;
-        width: 150px;
-        height: 150px;
-      }
-
-      .button {
-        display: inline-block;
-        background-color: #ff0f4f;
-        color: #fff;
-        padding: 10px 20px;
-        border-radius: 5px;
-        margin-top: 10px;
-        text-decoration: none;
-      }
->>>>>>> 73577ffeedcbfa26b9717b488fd10fed448630d4
     </style>
   </head>
   <body>
