--- a/google_site.html
+++ b/google_site.html
@@ -90,12 +90,12 @@
         <p>Conoce más del mundo de Google</p>
         <a href="#" class="button">Ver Guía</a>
       </div>
-      <div class="card">
+    <!-- <div class="card">
         <img src="img/software.png" alt="Imagen 6" />
         <h2>Software</h2>
         <p>Instalación Automática de Software</p>
         <a href="#" class="button">Ver Guía</a>
-      </div>
+      </div>-->
     </div>
   </body>
 </html>
