--- a/login.html
+++ b/login.html
@@ -54,6 +54,48 @@
 
   </div>
 
+  <div class="container2">
+    <div class="card">
+      <img src="./img/forticlient.png" alt="Imagen 1" />
+      <h2>Acceso VPN</h2>
+      <p>Configuraciones de forticlient VPN</p>
+      <a href="" class="button">Ver Guía</a>
+    </div>
+    <div class="card">
+      <img src="img/jumpcloud.jpg" alt="Imagen 2" />
+      <h2>PC Password</h2>
+      <p>Configuraciones de Jumpcloud</p>
+      <a href="#" class="button">Ver Guía</a>
+    </div>
+    <div class="card">
+      <img src="img/okta.webp" alt="Imagen 3" />
+      <h2>Okta SSO</h2>
+      <p>Manuales para configurar Okta SSO</p>
+      <a href="#" class="button">Ver Guía</a>
+    </div>
+    <div class="card">
+      <img src="img/inconcert.png" alt="Imagen 4" />
+      <h2>Telefonía</h2>
+      <p>Configuraciones de Telefonia Inconcert</p>
+      <a href="#" class="button">Ver Guía</a>
+    </div>
+    <div class="card">
+      <img
+        src="img/google-search-icon-google-product-illustration-free-png.webp"
+        alt="Imagen 5"
+      />
+      <h2>Google Workspace</h2>
+      <p>Conoce más del mundo de Google</p>
+      <a href="#" class="button">Ver Guía</a>
+    </div>
+  <!-- <div class="card">
+      <img src="img/software.png" alt="Imagen 6" />
+      <h2>Software</h2>
+      <p>Instalación Automática de Software</p>
+      <a href="#" class="button">Ver Guía</a>
+    </div>-->
+  </div>
+
 
   <button type="button" class="btn btn-danger btn-lg" id="openChatbot">
     <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-chat-quote-fill"
