--- a/login.html
+++ b/login.html
@@ -107,6 +107,21 @@
   </button>
 
 
+  <footer class="bg-dark text-light text-center py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div>
+                    <a href="https://www.google.com/appsstatus/dashboard/#hl=es&v=status" target="_blank" class="btn btn-info">Google Status</a>
+                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1yDYKbG7bmrqMmUAmABGABoQTsfs9icd1/preview" target="_blank" class="btn btn-info">Link de Accesos por Área</a>
+                    <a href="https://peyaplanning.atlassian.net/servicedesk/customer/portal/1" target="_blank" class="btn btn-info">Ticketera IT</a>
+                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1_MU8ATYBNt17pyisuh3jZy8pKcEyL8JG/preview" target="_blank" class="btn btn-info">¡Conoce nuestro equipo!</a>
+                    <a href="https://signature.peyait.app/" target="_blank" class="btn btn-info">Firma de mail</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
   <script>
     document.getElementById("openChatbot").addEventListener("click", function () {
