Revert "Update login.html"
This reverts commit ff3798121811d71d8e0bb2a5c3d55226dcf42ce2.

--- a/login.html
+++ b/login.html
@@ -95,24 +95,9 @@
     </div>-->  
     
   </div>
-  
-<!--<footer class="bg-dark text-light text-center py-3">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div>
-                    <a href="https://www.google.com/appsstatus/dashboard/#hl=es&v=status" target="_blank" class="btn btn-info">Google Status</a>
-                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1yDYKbG7bmrqMmUAmABGABoQTsfs9icd1/preview" target="_blank" class="btn btn-info">Link de Accesos por Área</a>
-                    <a href="https://peyaplanning.atlassian.net/servicedesk/customer/portal/1" target="_blank" class="btn btn-info">Ticketera IT</a>
-                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1_MU8ATYBNt17pyisuh3jZy8pKcEyL8JG/preview" target="_blank" class="btn btn-info">¡Conoce nuestro equipo!</a>
-                    <a href="https://signature.peyait.app/" target="_blank" class="btn btn-info">Firma de mail</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>-->
 
-  <button type="button" class="button" id="openChatbot">
+
+  <button type="button" class="btn btn-danger btn-lg" id="openChatbot">
     <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-chat-quote-fill"
       viewBox="0 0 16 16" alt="message-bot">
       <path
@@ -120,7 +105,6 @@
     </svg>
 
   </button>
-
 
 
 
