--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +39,7 @@
             d="M10.067.87a2.89 2.89 0 0 0-4.134 0l-.622.638-.89-.011a2.89 2.89 0 0 0-2.924 2.924l.01.89-.636.622a2.89 2.89 0 0 0 0 4.134l.637.622-.011.89a2.89 2.89 0 0 0 2.924 2.924l.89-.01.622.636a2.89 2.89 0 0 0 4.134 0l.622-.637.89.011a2.89 2.89 0 0 0 2.924-2.924l-.01-.89.636-.622a2.89 2.89 0 0 0 0-4.134l-.637-.622.011-.89a2.89 2.89 0 0 0-2.924-2.924l-.89.01-.622-.636zm.287 5.984-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7 8.793l2.646-2.647a.5.5 0 0 1 .708.708z" />
         </svg> Okta SSO<br><br>
 
-        <button type="button" class="button"><a
+        <button type="button" class="btn btn-danger btn-md"><a
             href="https://app.slack.com/client/T052P4KCD/D047UEH4J9M/app" class="Slack_Link"
             target="_blank">Instalar</a> </button>
 
@@ -95,7 +96,22 @@
     </div>-->  
     
   </div>
-
+  
+<footer class="bg-dark text-light text-center py-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div>
+                    <a href="https://www.google.com/appsstatus/dashboard/#hl=es&v=status" target="_blank" class="btn btn-info">Google Status</a>
+                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1yDYKbG7bmrqMmUAmABGABoQTsfs9icd1/preview" target="_blank" class="btn btn-info">Link de Accesos por Área</a>
+                    <a href="https://peyaplanning.atlassian.net/servicedesk/customer/portal/1" target="_blank" class="btn btn-info">Ticketera IT</a>
+                    <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1_MU8ATYBNt17pyisuh3jZy8pKcEyL8JG/preview" target="_blank" class="btn btn-info">¡Conoce nuestro equipo!</a>
+                    <a href="https://signature.peyait.app/" target="_blank" class="btn btn-info">Firma de mail</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 
   <button type="button" class="btn btn-danger btn-lg" id="openChatbot">
     <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-chat-quote-fill"
@@ -105,6 +121,7 @@
     </svg>
 
   </button>
+
 
 
 
