--- a/login.html
+++ b/login.html
@@ -53,6 +53,7 @@
     </div>
 
   </div>
+  <hr>
 
   <div class="container2">
     <div class="card">
@@ -84,7 +85,7 @@
         src="img/google-search-icon-google-product-illustration-free-png.webp"
         alt="Imagen 5"
       />
-      <h2>Google Workspace</h2>
+      <h2>Google</h2>
       <p>Conoce más del mundo de Google</p>
       <a href="#" class="button">Ver Guía</a>
     </div>
@@ -95,12 +96,12 @@
       <a href="#" class="button">Ver Guía</a>
     </div>-->  
     
-  </div>
+  </div> <br>
   
 <footer class="bg-dark text-light text-center py-3">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="">
                 <div>
                     <a href="https://www.google.com/appsstatus/dashboard/#hl=es&v=status" target="_blank" class="btn btn-info">Google Status</a>
                     <a href="https://sites.google.com/u/0/d/1nFLnXCDZajj57NrJ7-DGnaFgJgrgbwrr/p/1yDYKbG7bmrqMmUAmABGABoQTsfs9icd1/preview" target="_blank" class="btn btn-info">Link de Accesos por Área</a>
