--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@
       <a href="#" class="button">Ver Guía</a>
     </div>-->  
     
-  </div> 
+  </div> <br><br>
     <footer class="bg-dark text-light text-center py-3">
     <div class="container">
         <div class="row">
