--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
     
   </div> <br><br>
     <footer class="bg-dark text-light text-center py-3">
-    <div class="container">
+    <div class="container-footer">
         <div class="row">
             <div class="">
                 <div>
