--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <link href="./css/login.css" rel="stylesheet">
+<link href="./css/popup-encuesta.css" rel="stylesheet">
 </head>
 
 <body>
@@ -60,25 +61,25 @@
       <img src="./img/forticlient.png" alt="Imagen 1" />
       <h2>Acceso VPN</h2>
       <p>Configuraciones de forticlient VPN</p>
-      <a href="" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/acceso-a-vpn?authuser=0" class="button">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/jumpcloud.jpg" alt="Imagen 2" />
       <h2>PC Password</h2>
       <p>Configuraciones de Jumpcloud</p>
-      <a href="#" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/cambiar-contrase%C3%B1a-de-la-compu?authuser=0" class="button">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/okta.webp" alt="Imagen 3" />
       <h2>Okta SSO</h2>
       <p>Manuales para configurar Okta SSO</p>
-      <a href="#" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/okta-sso?authuser=0" class="button">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/inconcert.png" alt="Imagen 4" />
       <h2>Telefonía</h2>
       <p>Configuraciones de Telefonia Inconcert</p>
-      <a href="#" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/telefon%C3%ADa-virtual?authuser=0" class="button">Ver Guía</a>
     </div>
     <div class="card">
       <img
@@ -87,14 +88,14 @@
       />
       <h2>Google</h2>
       <p>Conoce más del mundo de Google</p>
-      <a href="#" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/google-workspace?authuser=0" class="button">Ver Guía</a>
     </div>
-  <!-- <div class="card">
+  <div class="card">
       <img src="img/software.png" alt="Imagen 6" />
       <h2>Software</h2>
-      <p>Instalación Automática de Software</p>
-      <a href="#" class="button">Ver Guía</a>
-    </div>-->  
+      <p>Instalación de Software</p>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/como-usar-el-bot-alfred/ver-pasos-para-instalar-software-en-el-equipo-via-alfed-has-clic-aqui" class="button">Ver Guía</a>
+    </div>
     
   </div> <br><br>
     <footer class="bg-dark text-light text-center py-3">
@@ -122,7 +123,7 @@
 
   
 
-  <button type="button" class="btn btn-danger btn-lg" id="openChatbot">
+  <button type="button" class="btn btn-danger btn-lg" id="openChatbot" alt="message-bot">
     <svg xmlns="http://www.w3.org/2000/svg" width="50" fill="currentColor" class="bi bi-chat-quote-fill"
       viewBox="0 0 16 16" alt="message-bot">
       <path
@@ -131,35 +132,36 @@
 
   </button>
 
-  <script>
-   // Muestra el mensaje emergente después de 2 segundos
-document.addEventListener("DOMContentLoaded", function() {
-  setTimeout(function() {
-    const popup = document.getElementById("popup");
-    popup.classList.add("active");
-  }, 2000);
+  <div class="modal" id="feedbackModal">
+    <div class="modal-content">
+        <h2>¡Danos tu opinión!</h2>
+        <p>Por favor, toma un momento para proporcionar tu feedback:</p>
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" placeholder="Correo Electrónico">
+        <br><br>
+        <p>Puntuación del diseño de la página:</p>
+        <label for="design1">1</label>
+        <input type="radio" name="design" id="design1" value="1">
+        <label for="design2">2</label>
+        <input type="radio" name="design" id="design2" value="2">
+        <!-- Agrega más opciones de puntuación si es necesario -->
+        <br><br>
+        <p>Puntuación del chatbot de ayuda:</p>
+        <label for="chatbot1">1</label>
+        <input type="radio" name="chatbot" id="chatbot1" value="1">
+        <label for="chatbot2">2</label>
+        <input type="radio" name="chatbot" id="chatbot2" value="2">
+        <!-- Agrega más opciones de puntuación si es necesario -->
+        <br><br>
+        <label for="comments">Comentarios:</label>
+        <textarea id="comments" rows="4" placeholder="Escribe tus comentarios aquí"></textarea>
+        <br><br>
+        <button id="closeModal" class="close-button">Cerrar</button>
+    </div>
+</div>
 
-  // Cierra el mensaje emergente cuando el botón "X" se hace clic
-  const closePopup = document.getElementById("closePopup");
-  closePopup.addEventListener("click", function() {
-    const popup = document.getElementById("popup");
-    popup.style.display = "none";
-  });
-
-  // Cierra el mensaje emergente cuando el botón "Katz" se hace clic
-  const openChatbot = document.getElementById("openChatbot");
-  openChatbot.addEventListener("click", function() {
-    const popup = document.getElementById("popup");
-    popup.style.display = "none";
-  });
-});
-
-
-  </script>
-
-
-
-
+  <script src="popup-message.js"></script>
+  <script src="popup-encuesta.js"></script>
   <script>
     document.getElementById("openChatbot").addEventListener("click", function () {
       // Abre el chatbot en una nueva ventana emergente
