alineacion de alfredito

--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <title>Portal IT Chatbot</title>
-    <link href="./css/index.css" rel="stylesheet">
-    <link href="loader.css" rel="stylesheet">
+    <link href="./css/login.css" rel="stylesheet">
+    
 </head>
 <body>
     <div class="wrapper">
