--- a/chatbot.html
+++ b/chatbot.html
@@ -8,14 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <style>
-      .wrapper {
-        background-color: rgb(238, 238, 238);
-        background-size: cover; /* Para ajustar la imagen al tamaño del contenedor */
-        background-repeat: no-repeat;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/chatbot.css" />
+  
 
     <title>Portal IT Chatbot</title>
   </head>
