--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
-<link href="./css/login.css" rel="stylesheet">
+<link href="./css/index.css" rel="stylesheet">
 </head>
 
 <body>
