--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <img src="./img/forticlient.png" alt="Imagen 1" />
       <h2>Acceso VPN</h2>
       <p>Configuraciones de forticlient VPN</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/acceso-a-vpn?authuser=0" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/acceso-a-vpn?authuser=0" class="button" target="_blank">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/jumpcloud.jpg" alt="Imagen 2" />
