links para cards
target blanks

--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
       <img src="img/jumpcloud.jpg" alt="Imagen 2" />
       <h2>PC Password</h2>
       <p>Configuraciones de Jumpcloud</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/cambiar-contrase%C3%B1a-de-la-compu?authuser=0" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/cambiar-contrase%C3%B1a-de-la-compu?authuser=0" class="button" target="_blank">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/okta.webp" alt="Imagen 3" />
       <h2>Okta SSO</h2>
       <p>Manuales para configurar Okta SSO</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/okta-sso?authuser=0" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/okta-sso?authuser=0" class="button" target="_blank">Ver Guía</a>
     </div>
     <div class="card">
       <img src="img/inconcert.png" alt="Imagen 4" />
       <h2>Telefonía</h2>
       <p>Configuraciones de Telefonia Inconcert</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/telefon%C3%ADa-virtual?authuser=0" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/telefon%C3%ADa-virtual?authuser=0" class="button" target="_blank">Ver Guía</a>
     </div>
     <div class="card">
       <img
@@ -84,13 +84,13 @@
       />
       <h2>Google</h2>
       <p>Conoce más del mundo de Google</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/google-workspace?authuser=0" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/google-workspace?authuser=0" class="button" target="_blank">Ver Guía</a>
     </div>
   <div class="card">
       <img src="img/software.png" alt="Imagen 6" />
       <h2>Software</h2>
       <p>Instalación de Software</p>
-      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/como-usar-el-bot-alfred/ver-pasos-para-instalar-software-en-el-equipo-via-alfed-has-clic-aqui" class="button">Ver Guía</a>
+      <a href="https://sites.google.com/pedidosya.com/itsupport/instructivos/como-usar-el-bot-alfred/ver-pasos-para-instalar-software-en-el-equipo-via-alfed-has-clic-aqui" class="button" target="_blank">Ver Guía</a>
     </div>
     
   </div> <br><br>
