--- a/chatbot.html
+++ b/chatbot.html
@@ -61,6 +61,6 @@
       type="audio/wav"
     ></audio>
 
-    <script src="script.js"></script>
+    <script src="chatbot.js"></script>
   </body>
 </html>
