cambio del titulo y arrays
se agregaron arrays de office, enlaces y jira

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <div class="container">
     <div class="left">
-      <h1><strong>¡Prueba Alfred!</strong>
+      <h3><strong>¿Ya interactuaste con Alfred?, Bot de Internal IT</strong>
         <style>
           @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
         </style>
-      </h1>
+      </h3>
       <p>Alfred está en Slack, capaz de realizar todas las funciones de soporte en las cuentas:<br><br>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
           class="bi bi-patch-check-fill" viewBox="0 0 16 16">
@@ -41,7 +41,7 @@
 
         <button type="button" class="btn btn-danger btn-md"><a
             href="https://app.slack.com/client/T052P4KCD/D047UEH4J9M/app" class="Slack_Link"
-            target="_blank">Instalar</a> </button>
+            target="_blank">Probar</a> </button>
     </div>
     <div class="right">
       <img
@@ -128,7 +128,7 @@
 
 <div class="popup" id="popup">
   <button id="closePopup" class="close-button">x</button>
-  <strong> ¿Te puedo ayudar? 👋     </strong>
+  <strong> ¿No encuentras alguna Guía? 🔎    </strong>
 </div> <br>
 
   
